--- a/composer.json
+++ b/composer.json
@@ -15,15 +15,15 @@
     },
     "require": {
         "php": "^7.0",
-        "symfony/lock": "^3.4",
-        "symfony/symfony": "^3.4"
+        "symfony/lock": "^3.0",
+        "symfony/symfony": "^2.8 || ^3.0"
     },
     "suggest": {
         "predis/predis": "To store locks in Redis"
     },
     "require-dev": {
         "predis/predis": "^1.1",
-        "phpunit/phpunit": "^7.4",
+        "phpunit/phpunit": "^6.0",
         "snc/redis-bundle": "^2.1"
     },
     "config": {
