--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
     },
     "require": {
         "php": "^7.0",
-        "symfony/lock": "^3.0",
-        "symfony/symfony": "^2.8 || ^3.0"
+        "symfony/lock": "^3.0 || ^4.0",
+        "symfony/symfony": "^2.8 || ^3.0 || ^4.0"
     },
     "suggest": {
         "predis/predis": "To store locks in Redis"
