--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
     "require": {
         "php": "^7.0",
         "symfony/lock": "^3.0 || ^4.0",
-        "symfony/symfony": "^2.8 || ^3.0 || ^4.0"
+        "symfony/config": "^3.0 || ^4.0",
+        "symfony/dependency-injection": "^3.0 || ^4.0",
+        "symfony/http-kernel": "^3.0 || ^4.0"
     },
     "suggest": {
         "predis/predis": "To store locks in Redis"
