--- a/composer.json
+++ b/composer.json
@@ -14,19 +14,21 @@
         }
     },
     "require": {
-        "php": "^7.0",
-        "symfony/lock": "^3.0 || ^4.0",
+        "php": ">=7.1",
+        "symfony/lock": "^v3.4 || ^4.4 || ^5.4",
         "symfony/config": "^3.0 || ^4.0",
-        "symfony/dependency-injection": "^3.0 || ^4.0",
-        "symfony/http-kernel": "^3.0 || ^4.0"
+        "symfony/dependency-injection": "^3.0 || ^4.0 || ^5.0",
+        "symfony/http-kernel": "^3.0 || ^4.0 || ^5.0",
+        "symfony/yaml": "^4.0 || ^5.0 || ^6.0 || ^7.0",
+        "symfony/console": "^4.4 || ^5.3 || ^6.0"
     },
     "suggest": {
         "predis/predis": "To store locks in Redis"
     },
     "require-dev": {
         "predis/predis": "^1.1",
-        "phpunit/phpunit": "^6.0",
-        "snc/redis-bundle": "^2.1"
+        "phpunit/phpunit": "^6.0 || ^7.0 || ^8.0",
+        "snc/redis-bundle": "^2.1 || ^3.0 || ^4.0"
     },
     "config": {
         "bin-dir": "bin"
