--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
     },
     "require": {
         "php": ">=7.1",
-        "symfony/lock": "^v3.4 || ^4.4 || ^5.4",
-        "symfony/config": "^3.0 || ^4.0 || ^5.0",
-        "symfony/dependency-injection": "^3.0 || ^4.0 || ^5.0",
-        "symfony/http-kernel": "^3.0 || ^4.0 || ^5.0",
+        "symfony/lock": "^v3.4 || ^4.4 || ^5.4 || ^6.0",
+        "symfony/config": "^3.0 || ^4.0 || ^5.0 || ^6.0",
+        "symfony/dependency-injection": "^3.0 || ^4.0 || ^5.0 || ^6.0",
+        "symfony/http-kernel": "^3.0 || ^4.0 || ^5.0 || ^6.0",
         "symfony/yaml": "^4.0 || ^5.0 || ^6.0 || ^7.0",
         "symfony/console": "^4.4 || ^5.3 || ^6.0"
     },
