--- a/test/config.yml
+++ b/test/config.yml
@@ -1,7 +1,7 @@
 framework:
     secret: test
     session:
-        storage_id: session.storage.mock_file
+        storage_factory_id: session.storage.factory.mock_file
 
 snc_redis:
     clients:
